hphp/hack/test/typecheck/control_flow/for_fake.php.like_types.exp
File "for_fake.php", line 12, characters 14-22:
Invalid argument (Typing[4110])
File "for_fake.php", line 6, characters 21-23:
Expected int
File "for_fake.php", line 4, characters 17-20:
But got null
